# IndusML

./: .gitignore  Dockerfile  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  api.py  app.py  index.html  pyproject.toml  requirements.txt  vocal_dataset.csv
conf/base/: catalog.yml  parameters.yml  parameters_inference.yml
data/01_raw/: audiogram_generator.py  test_generator.py
src/audio_prediction/: __init__.py  hooks.py  pipeline_registry.py  settings.py
src/audio_prediction/pipelines/data_processing/: nodes.py  pipeline.py
src/audio_prediction/pipelines/data_processing_vocal/: nodes.py  pipeline.py
src/audio_prediction/pipelines/hyperparameter_tuning/: nodes.py  pipeline.py
src/audio_prediction/pipelines/inference/: __init__.py  pipeline.py
src/audio_prediction/pipelines/inference_vocal/: nodes.py
src/audio_prediction/pipelines/training/: nodes.py  pipeline.py
src/audio_prediction/pipelines/training_vocal/: nodes.py  pipeline.py
src/vocal_prediction/: __main__.py
src/vocal_prediction/pipelines/inference/: pipeline.py
src/vocal_prediction/pipelines/training/: nodes.py
tests/: conftest.py  test_api.py  test_nodes.py
tests/pipelines/inference/: test_pipeline.py
tests/pipelines/training/: test_pipeline.py
